# DiRenderLab

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  clang-format-all.sh  glsupport.hpp  main.cc  shadow_mapping_base.cpp  ssao.cc  vcpkg.json
.github/workflows/: build.yml
GLwrapper/: framebuffer.cc  framebuffer.hh  global.hh  globject.cc  globject.hh  glsupport.cc  glsupport.hh  glsupport.hpp  program.cc  program.hh  shader.cc  shader.hh  shapes.cc  shapes.hh  texture.cc  texture.hh  vertex_array.cc  vertex_array.cpp  vertex_array.h  vertex_array.hh  vertex_buffer.cc  vertex_buffer.hh
cmake/: generate_header.cmake  utils.cmake
examples/: CMakeLists.txt  Template.cc
examples/DeferredMSAA/: DeferredMSAA.cc
examples/LTC/: LTC.cc
examples/PboBench/: PboBench.cc  PboBench.hh
examples/imgui_example/: imgui_example.cc  readme.txt
examples/instance/: instance.cc  instance.hh
examples/internal_examples/: CMakeLists.txt  Readme.md
examples/internal_examples/csflocking/: CMakeLists.txt  csflocking.cc
examples/internal_examples/dynamicIndex/: CMakeLists.txt  dynamicIndex.cc
examples/oit/: oit.cc  oit.hh
examples/pbrRender/: pbrRender.cc  pbrRender.hh
examples/shadowmap/: shadowmap.cc
examples/skybox/: skybox.cc  skybox.hh
examples/ssao/: ssao.cc
glad/: CMakeLists.txt  glad.c  glad.h
resources/models/sponza_compressed/: sponza.mtl
resources/shaders/: 3.1.2.debug_quad_depth.fs  mvp_pos_n_t_sampler.frag  mvp_pos_normal_texture.frag  mvp_pos_normal_texture.vert  screen_quad.frag  simple_float_test.frag  ssao.frag
resources/shaders/DeferredMSAA/: DebugPointLight.frag  Shading.frag  gBuffer.frag
resources/shaders/LTC/: ltc.frag
resources/shaders/TextOverlay/: BitMapFont.fs  ScreenOverlay.vs
resources/shaders/csflocking/: csflocking.comp  csflocking.frag  csflocking.vert
resources/shaders/dynamicIndex/: mvp_pos_normal_texture_instance.frag  mvp_pos_normal_texture_instance.vert
resources/shaders/instance/: asteroids.vert  asteroids_instance.vert
resources/shaders/oit/: dp_blend.frag  dp_finalshader.frag  dp_front_peel.frag  oit_composite.frag  oit_transparent.frag
resources/shaders/pbrRender/: calc_convolution.frag  cube.vert  pbr.vert  pbr_IBL.frag  pbr_IBL_Kulla_conty.frag  pbr_IBL_notexture.frag  pbr_direct.frag  precompute_brdf.frag  prefilter.frag  sphereTo2D.frag  utils.frag
resources/shaders/shadowmap/: light.frag  shadow_mapping.frag
resources/shaders/skybox/: cube_reflect.frag  skybox.frag  skybox.vert  skybox_2.vert
resources/shaders/ssao/: blur.frag  gbuffer.frag  gbuffer.vert  simple_vec3_test.frag  ssao.frag
resources/textures/ltc/: ltc_1.dds
utils/: cmake_vars.h  cmake_vars.h.in  high_resolution_timer.cc  high_resolution_timer.h  resource_path_searcher.cc  resource_path_searcher.h  text_overlay.cc  text_overlay.hh
